# agentic-ai

./: .dockerignore  .flake8  .gitignore  README.md  alembic.ini  docker-compose.yml  dockerfile  main.py  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1739a1c6d92e_initial_migration.py  5027530bdce1_initial_migration.py
app/agents/: analysis_agent.py  data_agent.py  graph.py  query_agent.py  response_agent.py  workflow_agent.py
app/api/: chat.py
app/core/: config.py  database.py  logger.py  s3_bucket.py
app/models/: models.py
app/services/: agent_service.py
