[tool.poetry]
name = "Agentic-AI"
version = "0.1.0"
description = ""
authors = ["pradeepsingh33355 <pradeep.d@questt.com>"]
readme = "README.md"
packages = [{ include = "app" }]


[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
langchain = {extras = ["pdf"], version = "^1.0.2"}
langchain-community = "^0.4"
langchain-openai = "^1.0.1"
qdrant-client = "^1.15.1"
dotenv = "^0.9.9"
pypdf = "^6.1.3"
langchain-qdrant = "^1.1.0"
fastapi = "^0.119.1"
uvicorn = "^0.38.0"
python-multipart = "^0.0.20"
langgraph = "^1.0.1"
pydantic-settings = "^2.11.0"
alembic = "^1.17.0"
psycopg2-binary = "^2.9.11"
typing-extensions = "^4.15.0"
docker = "^7.1.0"
watchtower = "^3.4.0"
python-json-logger = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
